Fix heading overflow

--- a/css/sitecss.css
+++ b/css/sitecss.css
@@ -4,7 +4,6 @@
 font-family: 'Anton', sans-serif;
 }
 
-h1 {
+.btitle {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
 }
